<resources>
    <string name="app_name">kanaku Book</string>
    <string name="name_mandatory">Name <font color='#FF0000'>*</font></string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_mandatory">Phone Number <font color='#FF0000'>*</font></string>
    <string name="password">Password</string>
    <string name="password_mandatory">Password <font color='#FF0000'>*</font></string>
    <string name="old_password">old Password</string>
    <string name="new_password">new password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="repeat_password_mandatory">Repeat Password <font color='#FF0000'>*</font></string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="friends">Friends</string>
    <string name="groups">Groups</string>
    <string name="activity">Activity</string>
    <string name="date_of_birth">DD/MM/YYYY</string>
    <string name="search">Search...</string>
    <string name="go_back">← Go Back</string>
</resources>