<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_secondaryContainer"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/spacing_medium"
                android:layout_marginStart="@dimen/spacing_medium"
                android:text="Already \nhave an \nAccount?"
                android:textColor="#FFFFFF"
                android:paddingTop="@dimen/spacing_medium"
                android:textFontWeight="600"
                android:textSize="@dimen/text_size_big"
                app:layout_constraintBottom_toBottomOf="@+id/image_profile"
                app:layout_constraintEnd_toStartOf="@+id/image_profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/image_profile" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_extra_large_plus_spacing_medium"
                android:layout_marginEnd="@dimen/spacing_medium"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_login_hero"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_phone_number"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_extra_large_plus_spacing_medium"
                android:layout_marginTop="@dimen/spacing_extra_large_plus_spacing_medium"
                android:hint="@string/phone_number"
                app:cursorColor="@color/black"
                app:boxCornerRadiusBottomEnd="@dimen/spacing_extra_large"
                app:boxCornerRadiusBottomStart="@dimen/spacing_extra_large"
                app:boxCornerRadiusTopEnd="@dimen/spacing_extra_large"
                app:boxCornerRadiusTopStart="@dimen/spacing_extra_large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_profile"
                app:startIconDrawable="@drawable/call_24px">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:paddingVertical="20dp"
                    android:paddingStart="50dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_extra_large_plus_spacing_medium"
                android:layout_marginTop="@dimen/spacing_small"
                android:hint="@string/password"
                app:boxCornerRadiusBottomEnd="@dimen/spacing_extra_large"
                app:boxCornerRadiusBottomStart="@dimen/spacing_extra_large"
                app:boxCornerRadiusTopEnd="@dimen/spacing_extra_large"
                app:boxCornerRadiusTopStart="@dimen/spacing_extra_large"
                app:errorIconDrawable="@null"
                app:cursorColor="@color/black"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_phone_number"
                app:startIconDrawable="@drawable/key_24px"
                tools:layout_editor_absoluteX="24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:paddingVertical="20dp"
                    android:paddingStart="50dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_log_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_extra_large_plus_spacing_medium"
                android:backgroundTint="#FFF7FD"
                android:paddingHorizontal="70dp"
                android:paddingVertical="@dimen/spacing_medium"
                android:text="@string/login"
                android:textColor="#3E3E3E"
                android:textFontWeight="600"
                android:textSize="@dimen/text_size_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_password" />

            <TextView
                android:id="@+id/don_have_account_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:text="Don't have an account?"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_log_in" />

            <TextView
                android:id="@+id/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_marginEnd="24dp"
                android:padding="15dp"
                android:text="SIGN UP →"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/don_have_account_tv" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>